--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ankit S</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="svg" href="logo-no-background.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gradient-to-r from-rose-100 to-teal-100">
+  <body class="mainBody bg-gradient-to-r from-rose-100 to-teal-100">
+    <!-- TopButton -->
+    <button
+      id="topBtn"
+      class="bg-gradient-to-r from-indigo-200 via-red-200 to-yellow-100 p-4 text-blue-600 border border-none rounded-full cursor-pointer fixed bottom-10 left-10 hover:shadow-xl hover:shadow-cyan-500 ease-in duration-200 animate-bounce">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="30"
+        height="30"
+        fill="currentColor"
+        class="bi bi-arrow-up"
+        viewBox="0 0 16 16">
+        <path
+          fill-rule="evenodd"
+          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+      </svg>
+    </button>
     <header class="">
+      <!-- HamburgerMenu -->
+      <aside
+        id="mob-nav"
+        class="h-screen shadow-2xl shadow-indigo-500 w-1/2 fixed top-0 -right-1/2 bg-gradient-to-r from-rose-100 to-teal-100 transition-all ease-in duration-300">
+        <div class="cross">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="40"
+            height="40"
+            fill="currentColor"
+            class="bi bi-x text-blue-600 m-2 hover:h-14 hover:w-14 ease-in duration-200"
+            viewBox="0 0 16 16">
+            <path
+              d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+          </svg>
+        </div>
+        <div class="">
+          <ul
+            class="flex items-center justify-center flex-col h-screen space-y-10">
+            <li
+              class="nav-links font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
+              <a href="#aboutMe">About Me</a>
+            </li>
+            <li
+              class="nav-links font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
+              <a href="#MyProjects">My Projects</a>
+            </li>
+            <li
+              class="nav-links font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
+              <a href="#ContactMe">Contact Me</a>
+            </li>
+            <button
+              class="nav-links border font-mono bg-gradient-to-r from-indigo-200 via-red-200 to-yellow-100 text-blue-500 px-4 py-2 border-none rounded-lg ease-in duration-200 text-lg hover:text-xl hover:shadow-inner hover:shadow-cyan-400">
+              <a href="#MyResume">My Resume</a>
+            </button>
+          </ul>
+        </div>
+      </aside>
       <nav
         class="flex justify-between items-center hover:shadow-2xl ease-in duration-300 p-4 px-10 hover:shadow-cyan-300">
         <div class="flex">
@@ -178,38 +231,46 @@
             ></a>
           </div>
         </div>
+
         <div class="flex">
-          <!-- Hamburger svg -->
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="md:hidden w-8 h-8 hover:w-10 hover:h-10 ease-in duration-200 text-blue-600">
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-          </svg>
+          <button class="" id="hamburger">
+            <!-- Hamburger svg -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="md:hidden w-8 h-8 hover:w-10 hover:h-10 ease-in duration-200 text-blue-600">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+          </button>
+
           <div class="">
             <ul class="hidden md:flex space-x-8 lg:space-x-16 items-center">
               <li
-                class="font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
-                About Me
+                id="hLink1"
+                class="nav-links font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
+                <a href="#aboutMe">About Me</a>
               </li>
               <li
-                class="font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
-                My Projects
+                id="hLink2"
+                class="nav-links font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
+                <a href="#MyProjects">My Projects</a>
               </li>
               <li
-                class="font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
-                Contact Me
+                id="hLink3"
+                class="nav-links font-mono text-blue-600 text-lg hover:text-xl ease-in duration-200 hover:text-green-500">
+                <a href="#ContactMe">Contact Me</a>
               </li>
 
               <button
-                class="border font-mono bg-gradient-to-r from-indigo-200 via-red-200 to-yellow-100 text-blue-500 px-4 py-2 border-none rounded-lg ease-in duration-200 text-lg hover:text-xl">
-                My Resume
+                id="hLink4"
+                class="nav-links border font-mono bg-gradient-to-r from-indigo-200 via-red-200 to-yellow-100 text-blue-500 px-4 py-2 border-none rounded-lg ease-in duration-200 text-lg hover:text-xl hover:shadow-inner hover:shadow-cyan-400">
+                <a href="#MyResume">My Resume</a>
               </button>
             </ul>
           </div>
@@ -217,7 +278,7 @@
       </nav>
     </header>
     <main>
-      <section class="flex text-center justify-center">
+      <section id="home" class="flex text-center justify-center">
         <div class="flex flex-col md:p-20 p-10">
           <h5
             class="text-2xl md:text-4xl font-extrabold text-blue-600 font-mono pb-14 lg:pb-20">
@@ -240,9 +301,9 @@
         </div>
       </section>
       <!-- AboutMe -->
-      <section class="">
+      <section class="" id="aboutMe">
         <div class="flex flex-col items-center justify-center text-center">
-          <h3 class="text-4xl font-mono text-indigo-600 font-bold m-10 md:m-20">
+          <h3 class="text-4xl font-mono text-indigo-600 font-bold m-10 md:m-15">
             About Me
           </h3>
           <img
@@ -271,10 +332,10 @@
       </section>
 
       <!-- MyProjects -->
-      <section class="">
-        <div class="flex flex-col items-center justify-center text-center">
+      <section class="" id="MyProjects">
+        <div class="flex flex-col items-center justify-center text-center mb-20">
           <h3
-            class="text-4xl font-mono text-indigo-600 font-bold m-10 md:m-15 p-10">
+            class="text-4xl font-mono text-indigo-600 font-bold m-10 p-10">
             My Projects
           </h3>
           <div
@@ -370,12 +431,20 @@
               </button>
             </div>
           </div>
+          <div class="text-center flex items-center justify-center">
+            <p class="md:p-20 p-10 text-xl font-mono font-bold text-indigo-800">
+              And many more exciting projects coming soon....
+            </p>
+          </div>
         </div>
+        
       </section>
       <!-- ContactMe -->
-      <section class="flex items-center justify-center text-center flex-col">
+      <section
+        class="flex items-center justify-center text-center flex-col mb-20"
+        id="ContactMe">
         <div
-          class="flex flex-col md:mt-20 mt-10 text-center items-center justify-center">
+          class="flex flex-col md:m-20 mt-10 text-center items-center justify-center">
           <h3 class="text-4xl font-mono text-indigo-600 font-bold m-10">
             Contact Me
           </h3>
@@ -442,9 +511,12 @@
         </div>
       </section>
     </main>
-    <footer class="text-blue-400 bg-gradient-to-r from-indigo-200 via-red-200 to-yellow-100 body-font items-center mt-10 md:mt-20 cursor-pointer">
-      <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-        <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+    <footer
+      class="text-blue-400 bg-gradient-to-r from-indigo-200 via-red-200 to-yellow-100 body-font items-center mt-10 md:mt-20 cursor-pointer">
+      <div
+        class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+        <a
+          class="flex title-font font-medium items-center md:justify-start justify-center text-white">
           <a href="#" class="">
             <svg
               class="w-10 h-10 border border-none rounded-xl hover:w-12 hover:h-12 ease-in duration-200"
@@ -606,29 +678,67 @@
               </g></svg
           ></a>
         </a>
-        <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 AnkitS
-          <a href="https://twitter.com" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer"></a>
+        <p
+          class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">
+          © 2023 AnkitS
+          <a
+            href="https://twitter.com"
+            class="text-gray-500 ml-1"
+            target="_blank"
+            rel="noopener noreferrer"></a>
         </p>
-        <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+        <span
+          class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
           <a class="text-blue-500">
-            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-              <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+            <svg
+              fill="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              class="w-5 h-5"
+              viewBox="0 0 24 24">
+              <path
+                d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
             </svg>
           </a>
           <a class="ml-3 text-blue-500">
-            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-              <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+            <svg
+              fill="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              class="w-5 h-5"
+              viewBox="0 0 24 24">
+              <path
+                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
             </svg>
           </a>
           <a class="ml-3 text-blue-500">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <svg
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              class="w-5 h-5"
+              viewBox="0 0 24 24">
               <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-              <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+              <path
+                d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
             </svg>
           </a>
           <a class="ml-3 text-blue-500">
-            <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
-              <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+            <svg
+              fill="currentColor"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="0"
+              class="w-5 h-5"
+              viewBox="0 0 24 24">
+              <path
+                stroke="none"
+                d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
               <circle cx="4" cy="4" r="2" stroke="none"></circle>
             </svg>
           </a>
@@ -636,4 +746,5 @@
       </div>
     </footer>
   </body>
+  <script src="script.js"></script>
 </html>
